fix comment metadata alignment (fixes #1736)

--- a/src/adhocracy_frontend/adhocracy_frontend/static/stylesheets/scss/components/_comment.scss
+++ b/src/adhocracy_frontend/adhocracy_frontend/static/stylesheets/scss/components/_comment.scss
@@ -254,6 +254,7 @@ parent: comment
     }
 
     .comment-header-column1 {
+        @include text-align(left);
         float: left;
     }
 
